package g1.application;

public interface Repository {

    // public void save();

    // public list load(); 



}
