package g1.infrastructure;

import g1.application.Repository;

public class ProductRepository implements Repository {

}
