@startuml OODProject
title OODProject

Class Main {
    Hello, i run things!

}
rectangle PresentationLayer {
Class ConsoleUI {
   + Menuloop()
   + readInput()
   + printOutput()

}
}
rectangle ApplicationLayer {
Class ProductApplicationService {
    + Arraylist : Product[]
    + createProduct()
    + listProduct()
    + getDetails()
    + calculateImpact()

}


Class LoginService {
    - Arraylist : Account[]
    + login()
    + logout()

}
Class MaterialApplicationService {
    + Arraylist : Material[]
    + addMaterial()
    + listMaterials()
    + getDetails()

}
}

rectangle DomainLayer {
Class Account {
    - username
    - password
    - accountPrivilages

}

Class Material {
   + String name
   + RecyclingCategory 
   + int EnvironmentalImpact

}

Class Product {
    + Arraylist : Material[]
    + String name 
    + int estimatedLifespan

}



Interface ImpactCalculationStrategy {
    + calculateImpact()
}

Class SimpleSumStrategy {
    + calculateImpact()


}

Class WeightedByLifespanStrategy {
    + calculateImpact()

}


Class RecyclingGuidance  {
    + buildSingleMaterialGuidance()
    + buildMixedMaterialGuidance()
    
}
}
rectangle Infrastructure {

interface Repository {
    + saveToFile()
    + loadFromFile()
}

class materialRepository {
    + saveToFile()
    + loadFromFile()
}
class productRepository {
    + saveToFile()
    + loadFromFile()
}
class accountRepository{
    + saveToFile()
    + loadFromFile()
}
class recyclingRepository {
    + saveToFile()
    + loadFromFile()
}
}
' Class AccountManager {
'     - Arraylist : accounts[]
'     + addAccount()
'     + removeAccount()

' }

' Class MaterialManager {
'     + Arraylist : Material[]
'     + addMaterial()
'     + removeMaterial()

' }

' Class ProductManager {
'     + Arraylist : Product[]
'     + createProduct()
'     + removeProduct()

' }

ConsoleUI ..> ProductApplicationService : uses
ConsoleUI ..> MaterialApplicationService : uses
ConsoleUI ..> LoginService : uses
ProductApplicationService ..> MaterialApplicationService
ProductApplicationService"1" --* "1.." Product : PAS has products
MaterialApplicationService"1" --* "1.." Material : MAS has materials
ImpactCalculationStrategy <|-- SimpleSumStrategy : implements
ImpactCalculationStrategy <|-- WeightedByLifespanStrategy : implements
ProductApplicationService ..> ImpactCalculationStrategy
Product <-- RecyclingGuidance
LoginService --> Account
Product"1" *-- "1..*"Material
Repository <|-- accountRepository : implements
Repository <|-- materialRepository : implements
Repository <|-- productRepository : implements
Repository <|-- recyclingRepository : implements




' ConsoleUI ..> MaterialApplicationService : uses
' MaterialManager <.. MaterialApplicationService : uses
' Product"1" *-- "1..*"ProductManager
' ProductManager <.. ProductApplicationService : uses
' Material"1..*" *-- "1" MaterialManager
' LoginService --> AccountManager : uses
' AccountManager "1" *-- "0..*" Account
@enduml